# ml-mapo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: launch.json  settings.json
.playwright-cli/: page-2026-04-17T20-12-57-152Z.yml
.playwright-mcp/: page-2026-04-19T18-42-48-633Z.yml  page-2026-04-19T18-43-05-630Z.yml  page-2026-04-19T18-44-04-862Z.yml
demos/: fetch_data.py
doc/: v0.1_architecture.md
modules/data_ingestion/: README.md  design.md  main.py
prototype/: _logging.py  db_inspect.py  graph.json  graph.py  graph_cli.py  main.py  node_loader.py
prototype/data/: __init__.py  adaptors.py  bond_adaptors.py  config.py  graph.json  main.py  snapshots.py
prototype/forecast/: __init__.py  config.py  graph.json  main.py  snapshots.py
prototype/optimization/: __init__.py  config.py  graph.json  main.py  snapshots.py
prototype/risk/: __init__.py  config.py  graph.json  main.py  snapshots.py
web-ui/my-app/: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web-ui/my-app/app/: globals.css  layout.tsx  page.tsx
web-ui/my-app/app/api/events/: route.ts
web-ui/my-app/app/api/graph/: route.ts
web-ui/my-app/app/api/modules/: route.ts
web-ui/my-app/app/components/: nav-bar.tsx
web-ui/my-app/app/graph/: editor.css  page.tsx
web-ui/my-app/app/raw/: page.tsx
web-ui/my-app/app/trace/: page.tsx
web-ui/my-app/components/: GraphEditor.tsx
web-ui/my-app/lib/: convert.ts  history.ts  paths.ts  theme.ts  types.ts
web-ui/my-app/tests/: smoke.mjs
(+5 files in other folders)
